lab1/Test/L1-A-10-12.output
Error Type B at Line 5
Error Type A at Line 9
Error Type A at Line 16
Error Type B at Line 18
Error Type B at Line 23
Error Type B at Line 34
Error Type A at Line 52
Error Type A at Line 57
