lab1/Test/L1-A-10-12.cmm
struct uCiA0fLOOry {
  struct VWtTt4VwVVMpJOy0wAzF bRQsG9LONp0 ;
  int TxqER0w_95_zpXb9g ;
  float VGCakiBIJ ;
}!= hTWv5Ef2SF ( ) {
  if ( LQskYH9po9_ED9zdP ) {
    int PR_LbDlTMTf4LHp6QE [ 1442985697 ] = DT >= 
      JLBMbeCnorrSpzz - d * - ! ( pvjAZp = gAr = DC9c || 
      rP4m48A && ja4GQ == yf_ $[ BYRDUSpml = lHbR < ZNyCyz3 
      + duY3qcgETJrJPEFbJQ5u / w94B8takWs ( HFpLCnCxRzXV_V7l 
      && XkwHUk_NDfuZN0 > x7U23KZQ53 + ! ! qG3SVMRe ( NkXpTOama7f7Hm0M 
      , GaLoNZ6 || lLHdWJ <= K + Krv8rA6QJPvYgLM . vA98YNfa37AblYwN8x 
      != 839526130 || ! 1498592505.2034602403 . ePzkBoO_cZ8SvrnvF0aL 
      ) * JocODvs07NIY78 ( ) ) ] . ULj0Tpp7Cfko_VKQ ) , 
      hdDYr ;
~  }
}
int / ;
struct t9mAq ;
struct YXpghPWnf PhDC 
;
struct HY5KKjTRMnAz ;
int EEZ4IZHSbX6CUXuSzA2F ( struct else {
}G ) {
  if ( ZwnVz )   if ( sII6X72g )   ZRtD ;
else   if ( UxpwVKu2oyTWCer )   if ( UOFgmxpDw4rmO9u 
    )   while ( v4Rqbj6QIJ7Cxix ) {
    BDUxTE14PKZ2o7Lgy0Q ;
  }
else   sKpt7Iuz1s_2Dlexi6 ;

else   USQss8 ;

< 
else   if ( jw4z3JZv )   if ( J1C4F9_ )   aA6KZvvA 
    ;



  Dq6e1FoTDaPMKuB_s__U ;
{
  }  while ( skd_O3qmu4iWV )   while ( A4kKNJ4wkqj4_yR6 
    )   while ( JYjnJhdrz ) {
    int G_NdY7Jl4w7m0XnRrot ;
  }


  while ( jKdVc6xrM0AlJV )   bj7KHf ;

  while ( eT4RIuUKPvlZG4qsBDv0 )   if ( Zy )   return 
    UG1FOk3JUdJRL5kQa2m ;
else   PC6x ;'


}
int S_VhM82hvkKwL4 , Yh8K0Zgr 
'
;
int jEntlF2WqNl3G ( int fzQ28p0qsI9iu7MBtp , int sOGiIZlizd 
  ) {
}
